# zero2prod

./: .env  Cargo.toml  mig.sh
.github/workflows/: general.yml  rust.yml
migration/src/: m20220101_000001_create_user_table.rs
migrations/2023-05-08-110736_create_subscriptions_table/: down.sql
scripts/: init_db.sh
server/: Cargo.toml
server/src/: main.rs
src/: main.rs
zero2prod/: Cargo.toml
zero2prod/migration/: Cargo.toml
zero2prod/migration/src/: m20220101_000001_create_user_table.rs
zero2prod/migrations/2023-05-08-110736_create_subscriptions_table/: up.sql
zero2prod/src/: db_settings.rs  lib.rs  models.rs  startup.rs
zero2prod/src/entities/: user.rs
zero2prod/src/routes/: health_check.rs  subscriptions.rs
zero2prod/tests/: health_check.rs
