[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.24"
diesel = { version = "2.0.4", features = ["postgres", "uuid", "chrono"] }
dotenvy = "0.15.7"
serde = { version = "1.0.162", features = ["derive"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
uuid = "1.3.3"


[dev-dependencies]
reqwest = "0.11"
