[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
chrono = "0.4.24"
sea-orm = { version = "^0", features = [ "sqlx-postgres", "runtime-actix-native-tls", "macros", "with-chrono", "with-uuid" ] }
dotenvy = "0.15.7"
serde = { version = "1.0.162", features = ["derive"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.3.3", features = ["v4"] }
futures = "0.3.28"


[dev-dependencies]
reqwest = "0.11"
